# FootballPredictionSystem

./: API_IMPLEMENTATION_SUMMARY.md  README.md  config.yaml  env_template.txt  high_level_manual_cfbnfl_analyzer.txt  install.py  pyproject.toml
grid/: __init__.py  cli.py  config.py
grid/api/: __init__.py  main.py  schemas.py
grid/api/routers/: __init__.py  analytics.py  calibration.py  explanations.py  exports.py  games.py  players.py  predictions.py  special_teams.py  teams.py
grid/automation/: __init__.py  jobs.py
grid/data/: __init__.py  connectors.py  factory.py  schemas.py  storage.py  validators.py
grid/explain/: __init__.py  shap_explainer.py
grid/features/: __init__.py  player.py  situational.py  special_teams.py  team.py
grid/models/: __init__.py  elo.py  ensemble.py  tabular.py  transformer.py
grid/uncertainty/: __init__.py  conformal.py
